--- a/Gabriel.Cat.Xamarin.Wpf/Gabriel.Cat.Xamarin.Wpf.nuspec
+++ b/Gabriel.Cat.Xamarin.Wpf/Gabriel.Cat.Xamarin.Wpf.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>$version$</version>
+    <version>1.1.0</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
